@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho



class APIGateway {
}
class TableController {
    - _tableRepositories: ITableRepositories
    + DeleteTable(Guid id) : Task<IActionResult> 
}

interface ITableRepositories<<interface>> {
    + DeleteTable(Guid id) : Task<DeleteTableRequestDTO> 
}

class TableRepositories {
    - _tableDao: TableDAO
    + DeleteTable(Guid id) : Task<DeleteTableRequestDTO>
}

class TableDAO {
    - _client.From<Table> : ISupabaseTable<Table>
    + DeleteTable(Guid id) : Task<DeleteTableRequestDTO>
    + GetTableById(Guid id) : Task<GetTableResponseDTO?>
}


class Table {
    + Id: Guid
    + TableNumber: string
    + Capacity: int
    + Status: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + ShopId: Guid
    + TypeId: Guid
}


APIGateway -- TableController
TableController -- ITableRepositories
ITableRepositories <|-- TableRepositories
TableRepositories "1"--"1..*" TableDAO
TableDAO "1"--"0..*" Table

@enduml
